--- a/end.html
+++ b/end.html
@@ -7,10 +7,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Cousine:400,700" rel="stylesheet">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<div class="container">
+
 	<div class="jumbotron" id="jumbo">
 		<h1>You did it!</h1>
 		<p>Good luck on your journey!</p>
@@ -21,6 +22,6 @@
 	<script>
 		loadGif();
 	</script>
-</div>
+
 </body>
 </html>
