--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Cousine:400,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-<div id="container">
 
 <div class="jumbotron" id="jumbo">
 	<h1>Pick a Generation</h1>
 </div>
 
+<div class="container">
 	<nav>
 		<ul>
-			<li id="menu"><a href="gen1.html"><img src="media/buttons/button_gen1.png"></a></li>
-			<li id="menu"><a href="gen2.html"><img src="media/buttons/button_gen2.png"></a></li>
-			<li id="menu"><a href="gen3.html"><img src="media/buttons/button_gen3.png"></a></li>
-			<li id="menu"><a href="gen4.html"><img src="media/buttons/button_gen4.png"></a></li>
-			<li id="menu"><a href="gen5.html"><img src="media/buttons/button_gen5.png"></a></li>
-			<li id="menu"><a href="gen6.html"><img src="media/buttons/button_gen6.png"></a></li>
+			<li id="menu"><a href="gen1.html"><img src="media/Buttons/button_gen1.png"></a></li>
+			<li id="menu"><a href="gen2.html"><img src="media/Buttons/button_gen2.png"></a></li>
+			<li id="menu"><a href="gen3.html"><img src="media/Buttons/button_gen3.png"></a></li>
+			<li id="menu"><a href="gen4.html"><img src="media/Buttons/button_gen4.png"></a></li>
+			<li id="menu"><a href="gen5.html"><img src="media/Buttons/button_gen5.png"></a></li>
+			<li id="menu"><a href="gen6.html"><img src="media/Buttons/button_gen6.png"></a></li>
 		</ul>
 	</nav>
-	
 </div>
+	
 </body>
 </html>
