--- a/gen5.html
+++ b/gen5.html
@@ -37,4 +37,43 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
+</html><!DOCTYPE html>
+<html>
+<head>
+	<title>Pick Your Starter</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Cousine:400,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+
+<div class="jumbotron" id="jumbo">
+	<h1>Choose Your Starter</h1>
+	<p>Hover by the Pokémon for more details</p>
+</div>
+
+<div class="row flex">
+		<div class="col-lg-4">
+			<div class="starters grass">
+				<a href="end.html"><img src="media/starters/snivy_starter.gif"></a>
+			</div>
+		</div>
+
+		<div class="col-lg-4">
+			<div class="starters fire">
+				<a href="end.html"><img src="media/starters/tepig_starter.gif"></a>
+			</div>
+		</div>
+
+		<div class="col-lg-4">
+			<div class="starters water">
+				<a href="end.html"><img src="media/starters/oshawott_starter.gif"></a>
+			</div>
+		</div>
+</div>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
+</body>
 </html>
