--- a/end.html
+++ b/end.html
@@ -11,13 +11,15 @@
 </head>
 <body>
 
-
 	<div class="jumbotron" id="jumbo">
 		<h1>You did it!</h1>
 		<p>Good luck on your journey!</p>
 	</div>
 
-	<img id="pokeGif">
+	<div class="container">
+		<img id="pokeGif">
+	</div>
+
 
 	<script>
 		loadGif();
