--- a/gen6.html
+++ b/gen6.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Cousine:400,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-<div id="container">
 
 <div class="jumbotron" id="jumbo">
 	<h1>Choose Your Starter</h1>
